--- a/force-app/main/default/aura/reservaView/reservaView.cmp
+++ b/force-app/main/default/aura/reservaView/reservaView.cmp
@@ -60,7 +60,7 @@
 
     <!--Content-->
     <!-- Crio um card que recebe como título "Lista de reservas" e um icone de Pessoas -->
-    <lightning:card variant="Narrow" title="Lista de empréstimos" iconName="standard:partners">
+    <lightning:card variant="Narrow" title="Lista de reservas" iconName="standard:partners">
         <aura:set attribute="actions">
             <!-- Crio um botão que executa uma função ao ser clicado (showModal do meu reservaViewController) -->
             <lightning:button label="Novo" onclick="{!c.showModal}" name="novoLeitor" />
@@ -135,7 +135,7 @@
                         <lightning:layoutItem size="8" padding="around-medium">
                             <!-- Input para atribuir um valor a keyword -->
                             <lightning:input type="text" value="{!v.keyword}"
-                                label="Informe o livro que deseja realizar o empréstimo" />
+                                label="Informe o livro que deseja realizar o reserva" />
                         </lightning:layoutItem>
 
                         <lightning:layoutItem size="4" padding="around-medium">
@@ -198,7 +198,7 @@
                         <lightning:layoutItem size="8" padding="around-medium">
                             <!-- Input para atribuir um valor a keyword -->
                             <lightning:input type="text" value="{!v.keyword}"
-                                label="Informe o leitor que deseja realizar o empréstimo" />
+                                label="Informe o leitor que deseja realizar o reserva" />
                         </lightning:layoutItem>
 
                         <lightning:layoutItem size="4" padding="around-medium">
@@ -284,7 +284,7 @@
                             </lightning:select>
                         </lightning:layoutItem>
                         <lightning:layoutItem padding="horizontal-small" size="6">
-                            <lightning:input type="date" name="input7" label="Data do empréstimo" disabled="true"
+                            <lightning:input type="date" name="input7" label="Data da reserva" disabled="true"
                                 value="{!v.dataReserva}" />
                         </lightning:layoutItem>
 
